# finance-agent-mcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  styles.css
database/: connection.py
llm/: client_gemini.py  prompts.py
mcp_server/: server.py
mcp_server/tools/: expense_items.py  expense_summary.py
shared/: config_logging.py  date_config.py
tests/: test_gemini_client.py  test_infra.py
utils/: list_models.py
